# random-programs

./: README.md  lol.py
bookmarks-parser/: bookmanrks.md  bookmarks.html  main.py  pyproject.toml
cd-gif-effect/: main.py
doc-scraper/: main.py
mpv-plugins/: install.sh  mark.lua
sudoku-generator/c/: README.md  dev.sh  generator  generator.c
sudoku-generator/python/: generator.py
timer/: README.md  main.pl  timer.pl
